--- a/contact.html
+++ b/contact.html
@@ -393,11 +393,11 @@
           </div>
           <div class="contact-detail">
             <i class="fas fa-map-marker-alt"></i>
-            <span>123 Community Ave, City, State 12345</span>
+            <span>123 Community Ave, Hyderabad, 500001</span>
           </div>
           <div class="contact-detail">
             <i class="fas fa-clock"></i>
-            <span>Mon-Fri: 9am-6pm</span>
+            <span>Mon-Fri: 6am-10pm</span>
           </div>
         </div>
         <h3>Regional Offices</h3>
@@ -525,7 +525,7 @@
           <ul>
             <li><i class="fas fa-envelope"></i> info@foodshare.org</li>
             <li><i class="fas fa-phone"></i> (555) 123-FOOD</li>
-            <li><i class="fas fa-map-marker-alt"></i> 123 Community Ave, City</li>
+            <li><i class="fas fa-map-marker-alt"></i> 123 Community Ave, Hyderabad</li>
           </ul>
         </div>
       </div>
