--- a/partners.html
+++ b/partners.html
@@ -119,7 +119,7 @@
     }
     .hero {
       background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-        url('https://images.unsplash.com/photo-1558618666-fcd25856cd63?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+        url('https://i.imghippo.com/files/eWEq5757OfA.png') center/cover no-repeat;
       color: white;
       padding: 6rem 2rem;
       text-align: center;
@@ -622,3 +622,4 @@
   </script>
 </body>
 </html>
+
