Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     }
     .hero {
       background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-        url('https://fssai.gov.in/upload/uploadfiles/images/share_food.png') center/cover no-repeat;
+        url('https://www.save-food.org/interpackcache/picf/1/4/9/4/37066961719905334/isf2401_01041_Banner_Save_Food_588_x_160.png') center/cover no-repeat;
       color: white;
       padding: 6rem 2rem;
       text-align: center;
@@ -690,5 +690,6 @@
   </script>
 </body>
 </html>
+
 
 
