--- a/how-it-works.html
+++ b/how-it-works.html
@@ -119,7 +119,7 @@
     }
     .hero {
       background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-        url('https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+        url('https://i.pinimg.com/1200x/f7/6a/b2/f76ab2b2241f179eb480b6d7299b8ac3.jpg') center/cover no-repeat;
       color: white;
       padding: 6rem 2rem;
       text-align: center;
@@ -558,4 +558,5 @@
     });
   </script>
 </body>
+
 </html>
