--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
     }
     .hero {
       background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-        url('https://images.unsplash.com/photo-1507048331197-7d4ac70811cf?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+        url('https://i.pinimg.com/1200x/ec/ac/1a/ecac1a52c175080199e9c6c1fc6181d6.jpg') center/cover no-repeat;
       color: white;
       padding: 6rem 2rem;
       text-align: center;
@@ -524,4 +524,5 @@
     });
   </script>
 </body>
+
 </html>
