--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
     }
     .hero {
       background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-        url('https://i.pinimg.com/1200x/f7/6a/b2/f76ab2b2241f179eb480b6d7299b8ac3.jpg') center/cover no-repeat;
+        url('https://user-gen-media-assets.s3.amazonaws.com/gemini_images/f34f318d-4853-44aa-9aab-c5854f739b3e.png') center/cover no-repeat;
       color: white;
       padding: 6rem 2rem;
       text-align: center;
