--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact Us - FoodShare</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://i.pinimg.com/1200x/72/85/f9/7285f98236a9920930c32eff6eabf922.jpg" />
   <style>
     :root {
       --primary: #4caf50;
@@ -579,3 +579,4 @@
   </script>
 </body>
 </html>
+
