--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact Us - FoodShare</title>
-  <link rel="stylesheet" href="https://i.pinimg.com/1200x/72/85/f9/7285f98236a9920930c32eff6eabf922.jpg" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     :root {
       --primary: #4caf50;
@@ -119,7 +119,7 @@
     }
     .hero {
       background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-        url('https://images.unsplash.com/photo-1551135049-8a33b42738b4?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+        url('https://i.pinimg.com/1200x/72/85/f9/7285f98236a9920930c32eff6eabf922.jpg') center/cover no-repeat;
       color: white;
       padding: 6rem 2rem;
       text-align: center;
